--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="FPS.cpp" />
     <ClCompile Include="GunComponent.cpp" />
+    <ClCompile Include="LevelLoader.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
     <ClCompile Include="MapComponent.cpp" />
     <ClCompile Include="PlayerComponent.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="FPS.h" />
     <ClInclude Include="GunComponent.h" />
+    <ClInclude Include="LevelLoader.h" />
     <ClInclude Include="LivesComponent.h" />
     <ClInclude Include="MapComponent.h" />
     <ClInclude Include="PlayerComponent.h" />
