Implemented Commands and controller support to the game

--- a/BurgerTime/BurgerTime.vcxproj.filters
+++ b/BurgerTime/BurgerTime.vcxproj.filters
@@ -101,5 +101,8 @@
     <ClInclude Include="ScoreCounterComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TronCommands.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
