--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="ScoreComponent.h" />
     <ClInclude Include="ScoreCounterComponent.h" />
+    <ClInclude Include="TronCommands.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
