--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -163,8 +163,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BulletComponent.cpp" />
-    <ClCompile Include="BurgerTime.cpp" />
-    <ClCompile Include="BurgerTimeGame.cpp" />
+    <ClCompile Include="ScoreManager.cpp" />
+    <ClCompile Include="Tron.cpp" />
+    <ClCompile Include="TronGame.cpp" />
     <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="EnemyComponent.cpp" />
     <ClCompile Include="FPS.cpp" />
@@ -179,7 +180,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BulletComponent.h" />
-    <ClInclude Include="BurgerTimeGame.h" />
+    <ClInclude Include="ScoreManager.h" />
+    <ClInclude Include="TronGame.h" />
     <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="EnemyComponent.h" />
     <ClInclude Include="FPS.h" />
